# erz-cal

./: .gitignore  CONTRIBUTING  README.md  WORKSPACE  deploy.sh  erz_8001.ics  erz_8002.ics  erz_8003.ics  erz_8004.ics  erz_8005.ics  erz_8006.ics  erz_8008.ics  erz_8032.ics  erz_8037.ics  erz_8038.ics  erz_8041.ics  erz_8044.ics  erz_8045.ics  erz_8046.ics  erz_8047.ics  erz_8048.ics  erz_8049.ics  erz_8050.ics  erz_8051.ics  erz_8052.ics  erz_8053.ics  erz_8055.ics  erz_8057.ics  erz_8064.ics  index.md
KARTON/: erz_8001.ics  erz_8002.ics  erz_8003.ics  erz_8004.ics  erz_8005.ics  erz_8006.ics  erz_8008.ics  erz_8032.ics  erz_8037.ics  erz_8038.ics  erz_8041.ics  erz_8044.ics  erz_8045.ics  erz_8046.ics  erz_8047.ics  erz_8048.ics  erz_8049.ics  erz_8050.ics  erz_8051.ics  erz_8052.ics  erz_8053.ics  erz_8055.ics  erz_8057.ics  erz_8064.ics
PAPIER/: erz_8001.ics  erz_8002.ics  erz_8003.ics  erz_8004.ics  erz_8005.ics  erz_8006.ics  erz_8008.ics  erz_8032.ics  erz_8037.ics  erz_8038.ics  erz_8041.ics  erz_8044.ics  erz_8045.ics  erz_8046.ics  erz_8047.ics  erz_8048.ics  erz_8049.ics  erz_8050.ics  erz_8051.ics  erz_8052.ics  erz_8053.ics  erz_8055.ics  erz_8057.ics  erz_8064.ics
data/: WORKSPACE
data/erz/: BUILD.bazel
java/info/decamps/erzconverter/: BUILD.bazel  Main.java
java/info/decamps/erzconverter/csv/: BUILD.bazel  CalendarCsvParser.java
java/info/decamps/erzconverter/ics/: BUILD.bazel  Calendar.java  Event.java
java/info/decamps/erzconverter/index/: BUILD.bazel  IndexGenerator.java  index.md.vm
java/info/decamps/erzconverter/model/: BUILD.bazel  PickUp.java
javatests/info/decamps/erzconverter/csv/: BUILD.bazel  CalendarCsvParserTest.java
javatests/info/decamps/erzconverter/ics/: BUILD.bazel  CalendarTest.java  EventTest.java
javatests/info/decamps/erzconverter/index/: BUILD.bazel  IndexGeneratorTest.java  index.golden.md
