genrule(
    name = "gen_entsorgungskalender",
    srcs = [
        "//data/erz:entsorgungskalender_bioabfall_2020",
        "//data/erz:entsorgungskalender_papier_2020",
        "//data/erz:entsorgungskalender_karton_2020",
    ],
    outs = [
        "erz_8001.ics",
        "erz_8002.ics",
        "erz_8003.ics",
        "erz_8004.ics",
        "erz_8005.ics",
        "erz_8006.ics",
        "erz_8008.ics",
        "erz_8032.ics",
        "erz_8037.ics",
        "erz_8038.ics",
        "erz_8041.ics",
        "erz_8044.ics",
        "erz_8045.ics",
        "erz_8046.ics",
        "erz_8047.ics",
        "erz_8048.ics",
        "erz_8049.ics",
        "erz_8050.ics",
        "erz_8051.ics",
        "erz_8052.ics",
        "erz_8053.ics",
        "erz_8055.ics",
        "erz_8057.ics",
        "erz_8064.ics",
    ],
    cmd = "$(location :erzconverter_bin) --out $(RULEDIR)" +
#          " --bioabfall $(location //data/erz:entsorgungskalender_bioabfall_2020)" +
          " --papier $(location //data/erz:entsorgungskalender_papier_2020)" +
          " --karton $(location //data/erz:entsorgungskalender_karton_2020)",
    tools = [":erzconverter_bin"],
)

java_binary(
    name = "erzconverter_bin",
    srcs = ["Main.java"],
    data = [
        "//data/erz",
    ],
    main_class = "info.decamps.erzconverter.Main",
    deps = [
        "//java/info/decamps/erzconverter/csv",
        "//java/info/decamps/erzconverter/ics",
        "//java/info/decamps/erzconverter/model",
        "@maven//:com_beust_jcommander",
    ],
)

package_group(
    name = "visibility",
    packages = [
        "//java/info/decamps/erzconverter/...",
        "//javatests/info/decamps/erzconverter/...",
    ],
)
