genrule(
    name = "gen_entsorgungskalender",
    srcs = [
        "//data/erz:entsorgungskalender_bioabfall_2020",
        "//data/erz:entsorgungskalender_papier_2020",
        "//data/erz:entsorgungskalender_karton_2020",
    ],
    outs = [
        "index.md",
        "KARTON/erz_8001.ics",
        "KARTON/erz_8002.ics",
        "KARTON/erz_8003.ics",
        "KARTON/erz_8004.ics",
        "KARTON/erz_8005.ics",
        "KARTON/erz_8006.ics",
        "KARTON/erz_8008.ics",
        "KARTON/erz_8032.ics",
        "KARTON/erz_8037.ics",
        "KARTON/erz_8038.ics",
        "KARTON/erz_8041.ics",
        "KARTON/erz_8044.ics",
        "KARTON/erz_8045.ics",
        "KARTON/erz_8046.ics",
        "KARTON/erz_8047.ics",
        "KARTON/erz_8048.ics",
        "KARTON/erz_8049.ics",
        "KARTON/erz_8050.ics",
        "KARTON/erz_8051.ics",
        "KARTON/erz_8052.ics",
        "KARTON/erz_8053.ics",
        "KARTON/erz_8055.ics",
        "KARTON/erz_8057.ics",
        "KARTON/erz_8064.ics",
        "PAPIER/erz_8001.ics",
        "PAPIER/erz_8002.ics",
        "PAPIER/erz_8003.ics",
        "PAPIER/erz_8004.ics",
        "PAPIER/erz_8005.ics",
        "PAPIER/erz_8006.ics",
        "PAPIER/erz_8008.ics",
        "PAPIER/erz_8032.ics",
        "PAPIER/erz_8037.ics",
        "PAPIER/erz_8038.ics",
        "PAPIER/erz_8041.ics",
        "PAPIER/erz_8044.ics",
        "PAPIER/erz_8045.ics",
        "PAPIER/erz_8046.ics",
        "PAPIER/erz_8047.ics",
        "PAPIER/erz_8048.ics",
        "PAPIER/erz_8049.ics",
        "PAPIER/erz_8050.ics",
        "PAPIER/erz_8051.ics",
        "PAPIER/erz_8052.ics",
        "PAPIER/erz_8053.ics",
        "PAPIER/erz_8055.ics",
        "PAPIER/erz_8057.ics",
        "PAPIER/erz_8064.ics",
    ],
    cmd = "$(location :erzconverter_bin) --out $(RULEDIR)" +
          #          " --bioabfall $(location //data/erz:entsorgungskalender_bioabfall_2020)" +
          " --papier $(location //data/erz:entsorgungskalender_papier_2020)" +
          " --karton $(location //data/erz:entsorgungskalender_karton_2020)",
    tools = [":erzconverter_bin"],
)

java_binary(
    name = "erzconverter_bin",
    srcs = ["Main.java"],
    data = [
        "//data/erz",
    ],
    main_class = "info.decamps.erzconverter.Main",
    deps = [
        "//java/info/decamps/erzconverter/csv",
        "//java/info/decamps/erzconverter/ics",
        "//java/info/decamps/erzconverter/index",
        "//java/info/decamps/erzconverter/model",
        "@maven//:com_beust_jcommander",
        "@maven//:org_apache_velocity_velocity",
    ],
)

package_group(
    name = "visibility",
    packages = [
        "//java/info/decamps/erzconverter/...",
        "//javatests/info/decamps/erzconverter/...",
    ],
)
